--- a/src/App.css
+++ b/src/App.css
@@ -1018,11 +1018,9 @@ div#cards{
   text-align: center;
   border: 2px solid black;
   margin: 0 0 6px 0;
-  padding: 5px 5px;
+  padding: 2%;
   background: rgba(255, 255, 255, 0.769);
   width: 85%;
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
 .cat-card p{
